--- a/content/resources/21g-820f14.md
+++ b/content/resources/21g-820f14.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
   \ brother graffiti artists from Brazil. Their style is heavily influenced by both\
   \ hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY."
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/ac4bc04502ecd9705b4ab15b1e94b59a_21g-820f14.jpg
+file: /media/courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/ac4bc04502ecd9705b4ab15b1e94b59a_21g-820f14.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
@@ -12,6 +12,8 @@ image_metadata:
   credit: 'Image courtesy of erdalito on Flickr. CC: BY.'
   image-alt: A large image of a woman in a green jacket and a red headscarf has been
     painted on the side of multi-story building.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: Street art in Lisbon
 uid: ac4bc045-02ec-d970-5b4a-b15b1e94b59a
