Sync all content

--- a/content/resources/21g-820f14-th.md
+++ b/content/resources/21g-820f14-th.md
@@ -4,7 +4,7 @@ description: "Thumbnail image of a painting on the side of multi-story building.
   \ art in Lisbon, Portugal created by Os G\xEAmeos, identical twin brother graffiti\
   \ artists from Brazil. Their style is heavily influenced by both hip-hop and Brazilian\
   \ culture. Image courtesy of erdalito on Flickr. CC: BY."
-file: /media/courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/27285991709665d4259d0f6bda573c75_21g-820f14-th.jpg
+file: /courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/27285991709665d4259d0f6bda573c75_21g-820f14-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
@@ -19,3 +19,5 @@ resourcetype: Image
 title: Street Art in Lisbon (thumbnail)
 uid: 27285991-7096-65d4-259d-0f6bda573c75
 ---
+Thumbnail image of a painting on the side of multi-story building. Street art in Lisbon, Portugal created by Os Gêmeos, identical twin brother graffiti artists from Brazil. Their style is heavily influenced by both hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY.
+
