--- a/content/resources/21g-820f14.md
+++ b/content/resources/21g-820f14.md
@@ -3,7 +3,7 @@ content_type: resource
 description: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
   \ brother graffiti artists from Brazil. Their style is heavily influenced by both\
   \ hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY."
-file: /media/courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/ac4bc04502ecd9705b4ab15b1e94b59a_21g-820f14.jpg
+file: /courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/ac4bc04502ecd9705b4ab15b1e94b59a_21g-820f14.jpg
 file_type: image/jpeg
 image_metadata:
   caption: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
@@ -18,3 +18,5 @@ resourcetype: Image
 title: Street art in Lisbon
 uid: ac4bc045-02ec-d970-5b4a-b15b1e94b59a
 ---
+Street art in Lisbon, Portugal created by Os Gêmeos, identical twin brother graffiti artists from Brazil. Their style is heavily influenced by both hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY.
+
