Sync all content

--- a/content/resources/21g-820f14-th.md
+++ b/content/resources/21g-820f14-th.md
@@ -14,10 +14,10 @@ image_metadata:
   image-alt: A large image of a woman in a green jacket and a red headscarf has been
     painted on the side of multi-story building.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Street Art in Lisbon (thumbnail)
 uid: 27285991-7096-65d4-259d-0f6bda573c75
 ---
 Thumbnail image of a painting on the side of multi-story building. Street art in Lisbon, Portugal created by Os Gêmeos, identical twin brother graffiti artists from Brazil. Their style is heavily influenced by both hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY.
-
