--- a/content/resources/21g-820f14.md
+++ b/content/resources/21g-820f14.md
@@ -13,10 +13,10 @@ image_metadata:
   image-alt: A large image of a woman in a green jacket and a red headscarf has been
     painted on the side of multi-story building.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Street art in Lisbon
 uid: ac4bc045-02ec-d970-5b4a-b15b1e94b59a
 ---
 Street art in Lisbon, Portugal created by Os Gêmeos, identical twin brother graffiti artists from Brazil. Their style is heavily influenced by both hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY.
-
