Sync all content

--- a/content/resources/21g-820f14.md
+++ b/content/resources/21g-820f14.md
@@ -4,6 +4,7 @@ description: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical 
   \ brother graffiti artists from Brazil. Their style is heavily influenced by both\
   \ hip-hop and Brazilian culture. Image courtesy of erdalito on Flickr. CC: BY."
 file: /courses/21g-820-portuguese-advanced-conversation-and-composition-fall-2014/ac4bc04502ecd9705b4ab15b1e94b59a_21g-820f14.jpg
+file_size: 32381
 file_type: image/jpeg
 image_metadata:
   caption: "Street art in Lisbon, Portugal created by Os G\xEAmeos, identical twin\
